Добавил вывод Equipment

--- a/WSR_Tort/App.config
+++ b/WSR_Tort/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="WSR_TortikEntities" connectionString="metadata=res://*/Model.TortModel.csdl|res://*/Model.TortModel.ssdl|res://*/Model.TortModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WSGEXP\SQLEXPRESS;initial catalog=WSR_Tortik;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="WSR_TortikEntities" connectionString="metadata=res://*/Model.TortModel.csdl|res://*/Model.TortModel.ssdl|res://*/Model.TortModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-59GFRRP3\SQLEXPRESS;initial catalog=WSR_Tortik;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
